--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/core": "^2.11.7",
     "@tiptap/extension-image": "^2.11.7",
     "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-code-block-lowlight": "^2.11.7",
     "@tiptap/extension-table": "^2.11.7",
     "@tiptap/extension-table-cell": "^2.11.7",
     "@tiptap/extension-table-header": "^2.11.7",
@@ -22,6 +23,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "highlight.js": "^11.10.0",
+    "lowlight": "^3.1.0",
     "markdown-it": "^13.0.1",
     "punycode": "^2.3.1",
     "turndown": "^7.1.2"
