--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,5 +15,14 @@ tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.58", features = [
+  "Win32_UI_Shell",
+  "Win32_UI_Shell_Common",
+  "Win32_Foundation",
+  "Win32_System_Com",
+  "Win32_Storage_FileSystem"
+] }
+
 [features]
 custom-protocol = ["tauri/custom-protocol"]
